--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #f9fafb;
-  color: #333;
-}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
